--- a/about.html
+++ b/about.html
@@ -13,5 +13,11 @@
     <p>
     把所有认为有价值的过程都放在这里，包括技能学习，项目实践，思考总结，等等
     </p>
+
+    <h2>思考</h2>
+    <p>
+       如何才能迅速赚到100万？ 25/10/2 
+       
+    </p>
 </body>
 </html>
