--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <li>
         <a href="about.html">关于</a>
     </li>
+    <li>
+        <a href="散文诗.html">散文诗</a>
+    </li>
    </ol>
 </body>
 </html>
